checkbox filter start modify

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h2>Filtruj</h2>
                 <div class="filter active">
                     <label for="FilterRegion">Region</label>
-                    <div class="filter-content">
+                    <div id="FilterRegion" class="filter-content">
                         <div class="region">Region 1</div>
                     </div>
                 </div>
