font percentage, change db json structure, add fixed sortable header

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                 <div class="filter">
                     <label for="FilterInspectorate">Nadleśnictwo</label>
-                    <div class="filter-content">
+                    <div class="filter-content" style="display: block">
                         <div class="filter-group">
                             <label class="heading" for="RDLP Piła">
                                 <input type="checkbox" id="RDLP Piła" value="RDLP Piła">
@@ -162,7 +162,7 @@
 
                 <div class="filter">
                     <label for="FilterType">Wybierz gatunek</label>
-                    <div class="filter-content">
+                    <div class="filter-content" style="display: block">
                         <label for="LabelAll" class="heading">
                             <input type="checkbox" id="LabelAll" value="Aktualne gatunki">
                             Aktualne gatunki
