change safe search button position

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div id="SearchObserve">
             <span>Zapisz kryteria wyszukiwania do obserwowanych. Każdego dnia będziemy Cię informować emailowo o nowych
                 aukcjach spełniających wybrane wyniki wyszukiwania</span>
-            <button id="SafeSearch">Obserwuj wyszukiwanie</button>
         </div>
         <div id="Sidebar">
             <div id="UserPanel">
                 <h2>Witaj, Eustachy!</h2>
+                <h3><a href="#">Profil</a></h3>
                 <a href="#">Obserwowane wyszukiwania</a>
                 <a href="#">Obserwowane aukcje</a>
             </div>
@@ -374,6 +374,7 @@
 
         <div id="Main">
             <div id="TableAuctions">
+                <button id="SafeSearch">Obserwuj wyszukiwanie</button>
                 <div id="SortAuctions">
                     <div class="column"><span>LP.</span></div>
                     <div class="column"><span>RDLP</span></div>
