change template vw -> px

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <div id="FilterQuantity" class="filter-content numbers">
                         <label for="FilterMinQuantity">
                             <span>Ilość od</span>
-                            <input type="text" id="FilterMinQuantity" name="FilterMinQuantity" value="" min="0>
+                            <input type="text" id="FilterMinQuantity" name="FilterMinQuantity" value="" min="0">
                         </label>
                         <label for="FilterMaxQuantity">
                             <span>Ilość do</span>
@@ -340,7 +340,7 @@
 
                 <div class="filter">
                     <label for="FilterDate">Zakres dat (według zakończenia)</label>
-                    <div id="FilterDate" class="filter-content">
+                    <div id="FilterDate" class="filter-content dates">
                         <label for="FilterStart">
                             <span>Data zakończenia od</span>
                             <input type="date" id="FilterStart" name="FilterStart" value="" min="2020-12-04">
@@ -354,7 +354,7 @@
 
                 <div class="filter">
                     <label for="FilterReceiptDate">Termin odbioru</label>
-                    <div id="FilterReceiptDate" class="filter-content">
+                    <div id="FilterReceiptDate" class="filter-content dates">
                         <label for="FilterReceiptDate">
                             <span>Termin odbioru od</span>
                             <input type="date" id="FilterReceiptDate" name="FilterReceiptDate" value=""
