change style user panel and filters; add hover effect to actions rows

--- a/index.html
+++ b/index.html
@@ -696,6 +696,7 @@
                 <li><a class="next">Następna »</a></li>
                 <li><a class="last">Ostatnia »</a></li>
             </ul>
+            <span>Znaleziono 949 aukcji</span>
         </div>
     </div>
     <footer>Designed by Ferdynand</footer>
