sort sending and summary filters bugs fix, add paginations actions

--- a/index.html
+++ b/index.html
@@ -600,8 +600,8 @@
         </div>
         <div id="Pagination">
             <ul>
-                <li><a class="first">« Pierwsza</a></li>
-                <li><a class="prev">« Poprzednia</a></li>
+                <li><a class="first">Pierwsza</a></li>
+                <li><a class="prev">Poprzednia</a></li>
                 <li><a>7</a></li>
                 <li><a>8</a></li>
                 <li><a>9</a></li>
@@ -611,10 +611,10 @@
                 <li><a>13</a></li>
                 <li><a>14</a></li>
                 <li><a class="active">15 z 17</a></li>
-                <li><a class="next">Następna »</a></li>
-                <li><a class="last">Ostatnia »</a></li>
+                <li><a class="next">Następna</a></li>
+                <li><a class="last">Ostatnia</a></li>
             </ul>
-            <span>Znaleziono 949 aukcji</span>
+            <span class="result-count">Znaleziono 949 aukcji</span>
         </div>
     </div>
     <footer>Designed by Ferdynand</footer>
