add fetchApi and pseudo php api responser

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#">Obserwowane wyszukiwania</a>
                 <a href="#">Obserwowane aukcje</a>
             </div>
-            <form action="" method="get" id="Filters">
+            <form action="api.php" method="POST" id="Filters">
                 <div class="form-header">
                     <h2>Filtruj</h2>
                 </div>
