commercialGroups bug, ajaxRequest hidden input

--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
                 <input type="hidden" id="expectedPage" name="expectedPage">
                 <input type="hidden" id="actionType" name="actionType">
                 <input type="hidden" id="actionParams" name="actionParams">
+                <input type="hidden" id="ajaxRequest" name="ajaxRequest" value="1">
                 <input type="submit" hidden="true">
             </form>
         </div>
